objects/vlocity_ins__Interface_ProductAttribute__c.object
<CustomObject>
    <description>Interface Object: Used to stage inbound product attribute data for import into Vlocity Attributes and product Attribute Assignments.</description>
    <fields>
        <fullName>vlocity_ins__AttributeCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Attribute Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AttributeDisplaySequence__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Attribute Display Sequence</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AttributeFilterable__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Whether this attribute should be displayed in Filter section</description>
        <label>AttributeFilterable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AttributeName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Attribute Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CategoryApplicableSubType__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Category Applicable Sub Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CategoryApplicableTypes__c</fullName>
        <description>Object types to which this category applies</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Category Applicable Types</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CategoryCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Category Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CategoryDescription__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Category Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CategoryDisplayFilter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Category Filterable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CategoryDisplaySequence__c</fullName>
        <description>Display sequence of this category</description>
        <label>Category Display Sequence</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CategoryName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Category Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DRBundleName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DRBundleName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DRError__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DR Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DRProgressData__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DR Progress</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DRStatus__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DR Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProductApprovedOn__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Approved On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProductAttributeObjectType__c</fullName>
        <description>Type of Object being assigned to this Attribute</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Attribute Object Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProductAttributeValueDataType__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Attribute Value Data Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProductAttributeValueDescription__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Attribute Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProductAttributeValue__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Attribute Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProductAvailability__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Availability</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProductCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProductEffectiveDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProductEndDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProductLineOfBusiness__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Line of Business</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProductMarketSegment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Market Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProductStandardPremium__c</fullName>
        <label>Product Standard Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProductStatus__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProductSubType__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Sub Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProductType__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Product Attribute Interface</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Attribute Interface</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>